@@ -1,6 +1,10 @@
 ---
 name: Exception-Class-DBI
-version: 0.94
+version: !!perl/hash:Module::Build::Version
+  original: 0.95
+  version:
+    - 0
+    - 950
 author:
   - 'David Wheeler <david@kineticode.com>'
 abstract: DBI Exception objects
@@ -16,14 +20,14 @@ build_requires:
 provides:
   Exception::Class::DBI:
     file: lib/Exception/Class/DBI.pm
-    version: 0.94
+    version: 0.95
   Exception::Class::DBI::DBH:
     file: lib/Exception/Class/DBI.pm
   Exception::Class::DBI::H:
     file: lib/Exception/Class/DBI.pm
   Exception::Class::DBI::STH:
     file: lib/Exception/Class/DBI.pm
-generated_by: Module::Build version 0.2801
+generated_by: Module::Build version 0.2804
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
   version: 1.2
