@@ -3,6 +3,8 @@ Revision history for Perl extension Exception::Class::DBI.
 0.95
         - Fixed test failure for localized error messages. Reported by Jens
           Maier with a fix from Daniel Brook.
+        - Updated tests to use is($foo, $bar) instead of ok( $foo == $bar)
+          Spotted by Andy Lester.
 
 0.94  2006-06-30T00:04:32
         - The handler() method now always returns the same code referernce
